--- a/cifar10/mlflow_test/Dockerfile
+++ b/cifar10/mlflow_test/Dockerfile
@@ -4,5 +4,7 @@ RUN apt-get update \
     && apt-get -yq dist-upgrade \
     && apt-get install -yq \
     wget \
+    python3-pip \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && pip3 install --user pandas
